--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e8339e64",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2a93a2ea",
    "metadata": {},
    "outputs": [
@@ -177,253 +177,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>X</th>\n",
-       "      <th>Y</th>\n",
-       "      <th>OSMPTrailheadsOSMPOBJECTID</th>\n",
-       "      <th>OSMPTrailheadsOSMPRESTROOMS</th>\n",
-       "      <th>OSMPTrailheadsOSMPPICNIC</th>\n",
-       "      <th>OSMPTrailheadsOSMPFISHING</th>\n",
-       "      <th>OSMPTrailheadsOSMPX</th>\n",
-       "      <th>OSMPTrailheadsOSMPY</th>\n",
-       "      <th>OSMPTrailheadsOSMPELEVATION</th>\n",
-       "      <th>OSMPTrailheadsOSMPAKA</th>\n",
-       "      <th>...</th>\n",
-       "      <th>OSMPTrailheadsOSMPDATETO</th>\n",
-       "      <th>OSMPTrailheadsOSMPDATENOTES</th>\n",
-       "      <th>OSMPTrailheadsOSMPRECYCLEBIN</th>\n",
-       "      <th>OSMPTrailheadsOSMPDOGCOMPOST</th>\n",
-       "      <th>OSMPTrailheadsOSMPTHNAME</th>\n",
-       "      <th>OSMPTrailheadsOSMPTHLEASH</th>\n",
-       "      <th>OSMPTrailheadsOSMPTHURL</th>\n",
-       "      <th>OSMPTrailHeadURLOBJECTID</th>\n",
-       "      <th>OSMPTrailHeadURLTH_URL</th>\n",
-       "      <th>OSMPTrailHeadURLACCESSID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-105.294556</td>\n",
-       "      <td>40.006501</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>-105.294556</td>\n",
-       "      <td>-105.294556</td>\n",
-       "      <td>6044</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>2099-12-31T00:00:00.000Z</td>\n",
-       "      <td>Date from is unknown.</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Halfway House</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>32</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-105.309073</td>\n",
-       "      <td>39.997336</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>-105.309073</td>\n",
-       "      <td>-105.309073</td>\n",
-       "      <td>6755</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>2099-12-31T00:00:00.000Z</td>\n",
-       "      <td>Date from is unknown.</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Realization Point</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/realization-p...</td>\n",
-       "      <td>33</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/realization-p...</td>\n",
-       "      <td>272</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-105.258057</td>\n",
-       "      <td>39.938595</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>-105.258057</td>\n",
-       "      <td>-105.258057</td>\n",
-       "      <td>5621</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>2099-12-31T00:00:00.000Z</td>\n",
-       "      <td>Date from is unknown.</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>South Mesa</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/south-mesa-tr...</td>\n",
-       "      <td>34</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/south-mesa-tr...</td>\n",
-       "      <td>201</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-105.256649</td>\n",
-       "      <td>39.938244</td>\n",
-       "      <td>22</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>-105.256649</td>\n",
-       "      <td>-105.256649</td>\n",
-       "      <td>5634</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>2099-12-31T00:00:00.000Z</td>\n",
-       "      <td>Date from is unknown.</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Doudy Draw</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/doudy-draw-tr...</td>\n",
-       "      <td>35</td>\n",
-       "      <td>https://bouldercolorado.gov/osmp/doudy-draw-tr...</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-105.275469</td>\n",
-       "      <td>39.978708</td>\n",
-       "      <td>32</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>-105.275469</td>\n",
-       "      <td>-105.275469</td>\n",
-       "      <td>6110</td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td>2099-12-31T00:00:00.000Z</td>\n",
-       "      <td>Date from is unknown.</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>NCAR</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>235</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 44 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            X          Y  OSMPTrailheadsOSMPOBJECTID  \\\n",
-       "0 -105.294556  40.006501                          18   \n",
-       "1 -105.309073  39.997336                          19   \n",
-       "2 -105.258057  39.938595                          21   \n",
-       "3 -105.256649  39.938244                          22   \n",
-       "4 -105.275469  39.978708                          32   \n",
-       "\n",
-       "  OSMPTrailheadsOSMPRESTROOMS OSMPTrailheadsOSMPPICNIC  \\\n",
-       "0                         Yes                      Yes   \n",
-       "1                         Yes                      Yes   \n",
-       "2                         Yes                      Yes   \n",
-       "3                          No                       No   \n",
-       "4                          No                       No   \n",
-       "\n",
-       "  OSMPTrailheadsOSMPFISHING  OSMPTrailheadsOSMPX  OSMPTrailheadsOSMPY  \\\n",
-       "0                        No          -105.294556          -105.294556   \n",
-       "1                        No          -105.309073          -105.309073   \n",
-       "2                       Yes          -105.258057          -105.258057   \n",
-       "3                        No          -105.256649          -105.256649   \n",
-       "4                        No          -105.275469          -105.275469   \n",
-       "\n",
-       "   OSMPTrailheadsOSMPELEVATION OSMPTrailheadsOSMPAKA  ...  \\\n",
-       "0                         6044                        ...   \n",
-       "1                         6755                        ...   \n",
-       "2                         5621                        ...   \n",
-       "3                         5634                        ...   \n",
-       "4                         6110                        ...   \n",
-       "\n",
-       "   OSMPTrailheadsOSMPDATETO OSMPTrailheadsOSMPDATENOTES  \\\n",
-       "0  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
-       "1  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
-       "2  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
-       "3  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
-       "4  2099-12-31T00:00:00.000Z       Date from is unknown.   \n",
-       "\n",
-       "  OSMPTrailheadsOSMPRECYCLEBIN OSMPTrailheadsOSMPDOGCOMPOST  \\\n",
-       "0                           No                          Yes   \n",
-       "1                           No                           No   \n",
-       "2                          Yes                          Yes   \n",
-       "3                           No                           No   \n",
-       "4                           No                           No   \n",
-       "\n",
-       "  OSMPTrailheadsOSMPTHNAME OSMPTrailheadsOSMPTHLEASH  \\\n",
-       "0            Halfway House                       Yes   \n",
-       "1        Realization Point                       Yes   \n",
-       "2               South Mesa                       Yes   \n",
-       "3               Doudy Draw                       Yes   \n",
-       "4                     NCAR                       Yes   \n",
-       "\n",
-       "                             OSMPTrailheadsOSMPTHURL  \\\n",
-       "0                                                NaN   \n",
-       "1  https://bouldercolorado.gov/osmp/realization-p...   \n",
-       "2  https://bouldercolorado.gov/osmp/south-mesa-tr...   \n",
-       "3  https://bouldercolorado.gov/osmp/doudy-draw-tr...   \n",
-       "4                                                NaN   \n",
-       "\n",
-       "   OSMPTrailHeadURLOBJECTID  \\\n",
-       "0                        32   \n",
-       "1                        33   \n",
-       "2                        34   \n",
-       "3                        35   \n",
-       "4                        36   \n",
-       "\n",
-       "                              OSMPTrailHeadURLTH_URL  OSMPTrailHeadURLACCESSID  \n",
-       "0                                                NaN                       284  \n",
-       "1  https://bouldercolorado.gov/osmp/realization-p...                       272  \n",
-       "2  https://bouldercolorado.gov/osmp/south-mesa-tr...                       201  \n",
-       "3  https://bouldercolorado.gov/osmp/doudy-draw-tr...                       101  \n",
-       "4                                                NaN                       235  \n",
-       "\n",
-       "[5 rows x 44 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -436,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2bde0471",
    "metadata": {},
    "outputs": [
@@ -444,8 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The DataFrame has 63 rows and 11 columns.\n",
-      "The DataFrame has 36 rows and 44 columns.\n"
+      "The DataFrame has 63 rows and 11 columns.\n"
      ]
     }
    ],
@@ -457,29 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "98082699",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert the column names to lowercase and at underscore instead of spaces\n",
-    "parks.columns = parks.columns.str.lower().str.replace(' ', '_')"
+    "parks.columns = parks.columns.str.lower().str.replace(' ', '_')\n",
+    "parks.rename(columns={'recreation_visitors_(2021)': 'recreation_visitors'}, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "6a1dad71",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop columns that are not needed for analysis\n",
-    "parks.drop(columns=['park_name', 'second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
+    "parks.drop(columns=['second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "368da4ac",
    "metadata": {},
    "outputs": [
@@ -489,17 +242,18 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 63 entries, 0 to 62\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column                      Non-Null Count  Dtype \n",
-      "---  ------                      --------------  ----- \n",
-      " 0   latitude                    63 non-null     object\n",
-      " 1   longitude                   63 non-null     object\n",
-      " 2   primary_location            63 non-null     object\n",
-      " 3   area_in_acres               63 non-null     object\n",
-      " 4   area_in_km_squares          63 non-null     object\n",
-      " 5   recreation_visitors_(2021)  63 non-null     object\n",
-      "dtypes: object(6)\n",
-      "memory usage: 3.1+ KB\n"
+      "Data columns (total 7 columns):\n",
+      " #   Column               Non-Null Count  Dtype \n",
+      "---  ------               --------------  ----- \n",
+      " 0   park_name            63 non-null     object\n",
+      " 1   latitude             63 non-null     object\n",
+      " 2   longitude            63 non-null     object\n",
+      " 3   primary_location     63 non-null     object\n",
+      " 4   area_in_acres        63 non-null     object\n",
+      " 5   area_in_km_squares   63 non-null     object\n",
+      " 6   recreation_visitors  63 non-null     object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 3.6+ KB\n"
      ]
     }
    ],
@@ -510,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "80c7ae9b",
    "metadata": {},
    "outputs": [
@@ -535,12 +289,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>park_name</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>primary_location</th>\n",
        "      <th>area_in_acres</th>\n",
        "      <th>area_in_km_squares</th>\n",
-       "      <th>recreation_visitors_(2021)</th>\n",
+       "      <th>recreation_visitors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -552,9 +307,11 @@
        "      <td>63</td>\n",
        "      <td>63</td>\n",
        "      <td>63</td>\n",
+       "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unique</th>\n",
+       "      <td>63</td>\n",
        "      <td>61</td>\n",
        "      <td>62</td>\n",
        "      <td>30</td>\n",
@@ -564,6 +321,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
+       "      <td>Acadia</td>\n",
        "      <td>﻿58.50°N</td>\n",
        "      <td>110.50°W</td>\n",
        "      <td>California</td>\n",
@@ -573,6 +331,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>9</td>\n",
@@ -585,17 +344,17 @@
        "</div>"
       ],
       "text/plain": [
-       "        latitude longitude primary_location area_in_acres area_in_km_squares  \\\n",
-       "count         63        63               63            63                 63   \n",
-       "unique        61        62               30            63                 62   \n",
-       "top     ﻿58.50°N  110.50°W       California     49,071.40             108.0    \n",
-       "freq           2         2                9             1                  2   \n",
+       "       park_name  latitude longitude primary_location area_in_acres  \\\n",
+       "count         63        63        63               63            63   \n",
+       "unique        63        61        62               30            63   \n",
+       "top       Acadia  ﻿58.50°N  110.50°W       California     49,071.40   \n",
+       "freq           1         2         2                9             1   \n",
        "\n",
-       "       recreation_visitors_(2021)  \n",
-       "count                          63  \n",
-       "unique                         63  \n",
-       "top                     4,069,098  \n",
-       "freq                            1  "
+       "       area_in_km_squares recreation_visitors  \n",
+       "count                  63                  63  \n",
+       "unique                 62                  63  \n",
+       "top                108.0            4,069,098  \n",
+       "freq                    2                   1  "
       ]
      },
      "metadata": {},
@@ -609,11 +368,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bfa3b1c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['park_name', 'latitude', 'longitude', 'primary_location',\n",
+       "       'area_in_acres', 'area_in_km_squares', 'recreation_visitors'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parks.columns"
+   ]
   },
   {
    "cell_type": "code",
