--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -2,7 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "id": "bff4f22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: geopy in c:\\users\\jeelf\\anaconda3\\lib\\site-packages (2.4.1)\n",
+      "Requirement already satisfied: geographiclib<3,>=1.52 in c:\\users\\jeelf\\anaconda3\\lib\\site-packages (from geopy) (2.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install geopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "e8339e64",
    "metadata": {},
    "outputs": [],
@@ -16,6 +44,7 @@
     "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix, roc_curve, auc\n",
     "\n",
     "# Basline Model\n",
+    "from geopy.distance import geodesic\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Tree-Based Models\n",
@@ -32,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2a93a2ea",
    "metadata": {},
    "outputs": [
@@ -189,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "2bde0471",
    "metadata": {},
    "outputs": [
@@ -209,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "98082699",
    "metadata": {},
    "outputs": [],
@@ -221,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6a1dad71",
    "metadata": {},
    "outputs": [],
@@ -232,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "368da4ac",
    "metadata": {},
    "outputs": [
@@ -264,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "80c7ae9b",
    "metadata": {},
    "outputs": [
@@ -368,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "bfa3b1c3",
    "metadata": {},
    "outputs": [
@@ -380,7 +409,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,11 +420,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c26ff443",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "locations = parks[['park_name', 'latitude', 'longitude']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "03164166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create random route\n",
+    "random_route = locations.sample(frac=1, random_state=7).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ef71d437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute total distance\n",
+    "def total_distance(route):\n",
+    "    distance = 0\n",
+    "    for i in range(len(route) - 1):\n",
+    "        start = (route.loc[i]['latitude'], route.loc[i]['longtitude'])\n",
+    "        end = (route.loc[i + 1]['latitude'], route.loc[i + 1]['longtitude'])\n",
+    "        distance += geodesic(start, end).km\n",
+    "    return distance"
+   ]
   }
  ],
  "metadata": {
