--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -86,122 +86,72 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Park Name</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Primary Location</th>\n",
-       "      <th>Second Location</th>\n",
-       "      <th>Third Location</th>\n",
-       "      <th>Date established as park</th>\n",
-       "      <th>Area in acres</th>\n",
-       "      <th>Area in km squares</th>\n",
-       "      <th>Recreation visitors (2021)</th>\n",
-       "      <th>Description</th>\n",
+       "      <th>name</th>\n",
+       "      <th>state</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Acadia</td>\n",
-       "      <td>﻿44.35°N</td>\n",
-       "      <td>68.21°W</td>\n",
-       "      <td>Maine</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>February 26, 1919</td>\n",
-       "      <td>49,071.40</td>\n",
-       "      <td>198.6</td>\n",
-       "      <td>4,069,098</td>\n",
-       "      <td>Covering most of Mount Desert Island and other...</td>\n",
+       "      <td>Grand Canyon National Park</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>36.11</td>\n",
+       "      <td>-112.11</td>\n",
+       "      <td>National Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>American Samoa</td>\n",
-       "      <td>﻿14.25°S</td>\n",
-       "      <td>170.68°W</td>\n",
-       "      <td>American Samoa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>October 31, 1988</td>\n",
-       "      <td>8,256.67</td>\n",
-       "      <td>33.4</td>\n",
-       "      <td>8,495</td>\n",
-       "      <td>The southernmost national park is on three Sam...</td>\n",
+       "      <td>Yosemite National Park</td>\n",
+       "      <td>California</td>\n",
+       "      <td>37.87</td>\n",
+       "      <td>-119.54</td>\n",
+       "      <td>National Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Arches</td>\n",
-       "      <td>﻿38.68°N</td>\n",
-       "      <td>109.57°W</td>\n",
-       "      <td>Utah</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>November 12, 1971</td>\n",
-       "      <td>76,678.98</td>\n",
-       "      <td>310.3</td>\n",
-       "      <td>1,806,865</td>\n",
-       "      <td>This site features more than 2,000 natural san...</td>\n",
+       "      <td>Yellowstone National Park</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>44.43</td>\n",
+       "      <td>-110.59</td>\n",
+       "      <td>National Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Badlands</td>\n",
-       "      <td>﻿43.75°N</td>\n",
-       "      <td>102.50°W</td>\n",
-       "      <td>South Dakota</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>November 10, 1978</td>\n",
-       "      <td>242,755.94</td>\n",
-       "      <td>982.4</td>\n",
-       "      <td>1,224,226</td>\n",
-       "      <td>The Badlands are a collection of buttes, pinna...</td>\n",
+       "      <td>Zion National Park</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>37.30</td>\n",
+       "      <td>-113.03</td>\n",
+       "      <td>National Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Big Bend</td>\n",
-       "      <td>﻿29.25°N</td>\n",
-       "      <td>103.25°W</td>\n",
-       "      <td>Texas</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>June 12, 1944</td>\n",
-       "      <td>801,163.21</td>\n",
-       "      <td>3,242.2</td>\n",
-       "      <td>581,220</td>\n",
-       "      <td>Named for the prominent bend in the Rio Grande...</td>\n",
+       "      <td>Mount Rushmore</td>\n",
+       "      <td>South Dakota</td>\n",
+       "      <td>43.88</td>\n",
+       "      <td>-103.46</td>\n",
+       "      <td>Monument</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Park Name  Latitude Longitude Primary Location Second Location  \\\n",
-       "0          Acadia  ﻿44.35°N   68.21°W            Maine             NaN   \n",
-       "1  American Samoa  ﻿14.25°S  170.68°W   American Samoa             NaN   \n",
-       "2          Arches  ﻿38.68°N  109.57°W             Utah             NaN   \n",
-       "3        Badlands  ﻿43.75°N  102.50°W     South Dakota             NaN   \n",
-       "4        Big Bend  ﻿29.25°N  103.25°W            Texas             NaN   \n",
+       "                         name         state  latitude  longitude  \\\n",
+       "0  Grand Canyon National Park       Arizona     36.11    -112.11   \n",
+       "1      Yosemite National Park    California     37.87    -119.54   \n",
+       "2   Yellowstone National Park       Wyoming     44.43    -110.59   \n",
+       "3          Zion National Park          Utah     37.30    -113.03   \n",
+       "4              Mount Rushmore  South Dakota     43.88    -103.46   \n",
        "\n",
-       "  Third Location Date established as park Area in acres Area in km squares  \\\n",
-       "0            NaN        February 26, 1919     49,071.40             198.6    \n",
-       "1            NaN         October 31, 1988      8,256.67              33.4    \n",
-       "2            NaN        November 12, 1971     76,678.98             310.3    \n",
-       "3            NaN        November 10, 1978    242,755.94             982.4    \n",
-       "4            NaN            June 12, 1944    801,163.21           3,242.2    \n",
-       "\n",
-       "  Recreation visitors (2021)  \\\n",
-       "0                  4,069,098   \n",
-       "1                      8,495   \n",
-       "2                  1,806,865   \n",
-       "3                  1,224,226   \n",
-       "4                    581,220   \n",
-       "\n",
-       "                                         Description  \n",
-       "0  Covering most of Mount Desert Island and other...  \n",
-       "1  The southernmost national park is on three Sam...  \n",
-       "2  This site features more than 2,000 natural san...  \n",
-       "3  The Badlands are a collection of buttes, pinna...  \n",
-       "4  Named for the prominent bend in the Rio Grande...  "
+       "        category  \n",
+       "0  National Park  \n",
+       "1  National Park  \n",
+       "2  National Park  \n",
+       "3  National Park  \n",
+       "4       Monument  "
       ]
      },
      "metadata": {},
@@ -210,10 +160,10 @@
    ],
    "source": [
     "# load the dataset and set certain arguments to read the data correctly.\n",
-    "parks = pd.read_csv('us_national_parks.csv')\n",
+    "data = pd.read_csv('data.csv')\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "display(parks.head())"
+    "display(data.head())"
    ]
   },
   {
@@ -226,42 +176,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The DataFrame has 63 rows and 11 columns.\n"
+      "The DataFrame has 10 rows and 5 columns.\n"
      ]
     }
    ],
    "source": [
     "# Determining the size of the DataFrame\n",
-    "n_rows, n_cols = parks.shape\n",
+    "n_rows, n_cols = data.shape\n",
     "print(f\"The DataFrame has {n_rows} rows and {n_cols} columns.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "98082699",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert the column names to lowercase and at underscore instead of spaces\n",
-    "parks.columns = parks.columns.str.lower().str.replace(' ', '_')\n",
-    "parks.rename(columns={'recreation_visitors_(2021)': 'recreation_visitors'}, inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6a1dad71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop columns that are not needed for analysis\n",
-    "parks.drop(columns=['second_location', 'third_location', 'date_established_as_park', 'description'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "368da4ac",
    "metadata": {},
    "outputs": [
@@ -270,30 +197,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 63 entries, 0 to 62\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column               Non-Null Count  Dtype \n",
-      "---  ------               --------------  ----- \n",
-      " 0   park_name            63 non-null     object\n",
-      " 1   latitude             63 non-null     object\n",
-      " 2   longitude            63 non-null     object\n",
-      " 3   primary_location     63 non-null     object\n",
-      " 4   area_in_acres        63 non-null     object\n",
-      " 5   area_in_km_squares   63 non-null     object\n",
-      " 6   recreation_visitors  63 non-null     object\n",
-      "dtypes: object(7)\n",
-      "memory usage: 3.6+ KB\n"
+      "RangeIndex: 10 entries, 0 to 9\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   name       10 non-null     object \n",
+      " 1   state      10 non-null     object \n",
+      " 2   latitude   10 non-null     float64\n",
+      " 3   longitude  10 non-null     float64\n",
+      " 4   category   10 non-null     object \n",
+      "dtypes: float64(2), object(3)\n",
+      "memory usage: 532.0+ bytes\n"
      ]
     }
    ],
    "source": [
     "# Display informative summary of the DataFrame\n",
-    "parks.info()"
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "80c7ae9b",
    "metadata": {},
    "outputs": [
@@ -318,72 +243,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>park_name</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
-       "      <th>primary_location</th>\n",
-       "      <th>area_in_acres</th>\n",
-       "      <th>area_in_km_squares</th>\n",
-       "      <th>recreation_visitors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
-       "      <td>63</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>63</td>\n",
-       "      <td>61</td>\n",
-       "      <td>62</td>\n",
-       "      <td>30</td>\n",
-       "      <td>63</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>39.558000</td>\n",
+       "      <td>-102.739000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>Acadia</td>\n",
-       "      <td>﻿58.50°N</td>\n",
-       "      <td>110.50°W</td>\n",
-       "      <td>California</td>\n",
-       "      <td>49,071.40</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>4,069,098</td>\n",
+       "      <th>std</th>\n",
+       "      <td>3.249933</td>\n",
+       "      <td>17.415909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <th>min</th>\n",
+       "      <td>35.650000</td>\n",
+       "      <td>-122.480000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37.430000</td>\n",
+       "      <td>-112.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>38.300000</td>\n",
+       "      <td>-110.090000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>42.497500</td>\n",
+       "      <td>-88.497500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>44.430000</td>\n",
+       "      <td>-74.040000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       park_name  latitude longitude primary_location area_in_acres  \\\n",
-       "count         63        63        63               63            63   \n",
-       "unique        63        61        62               30            63   \n",
-       "top       Acadia  ﻿58.50°N  110.50°W       California     49,071.40   \n",
-       "freq           1         2         2                9             1   \n",
-       "\n",
-       "       area_in_km_squares recreation_visitors  \n",
-       "count                  63                  63  \n",
-       "unique                 62                  63  \n",
-       "top                108.0            4,069,098  \n",
-       "freq                    2                   1  "
+       "        latitude   longitude\n",
+       "count  10.000000   10.000000\n",
+       "mean   39.558000 -102.739000\n",
+       "std     3.249933   17.415909\n",
+       "min    35.650000 -122.480000\n",
+       "25%    37.430000 -112.800000\n",
+       "50%    38.300000 -110.090000\n",
+       "75%    42.497500  -88.497500\n",
+       "max    44.430000  -74.040000"
       ]
      },
      "metadata": {},
@@ -392,45 +310,43 @@
    ],
    "source": [
     "# Display descriptive statistics of the DataFrame\n",
-    "display(parks.describe())"
+    "display(data.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "bfa3b1c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['park_name', 'latitude', 'longitude', 'primary_location',\n",
-       "       'area_in_acres', 'area_in_km_squares', 'recreation_visitors'],\n",
-       "      dtype='object')"
+       "Index(['name', 'state', 'latitude', 'longitude', 'category'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parks.columns"
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c26ff443",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = data[['name', 'latitude', 'longitude']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c26ff443",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "locations = parks[['park_name', 'latitude', 'longitude']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "03164166",
    "metadata": {},
    "outputs": [],
@@ -441,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ef71d437",
    "metadata": {},
    "outputs": [],
