--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -134,6 +134,46 @@
        "      <td>-103.46</td>\n",
        "      <td>Monument</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Great Smoky Mountains</td>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>35.65</td>\n",
+       "      <td>-83.51</td>\n",
+       "      <td>Natural Wonder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Statue of Liberty</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>40.69</td>\n",
+       "      <td>-74.04</td>\n",
+       "      <td>Historical Landmark</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Arches National Park</td>\n",
+       "      <td>Utah</td>\n",
+       "      <td>38.73</td>\n",
+       "      <td>-109.59</td>\n",
+       "      <td>National Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Niagara Falls</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>43.10</td>\n",
+       "      <td>-79.04</td>\n",
+       "      <td>Natural Wonder</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Golden Gate Bridge</td>\n",
+       "      <td>California</td>\n",
+       "      <td>37.82</td>\n",
+       "      <td>-122.48</td>\n",
+       "      <td>Landmark</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -145,13 +185,23 @@
        "2   Yellowstone National Park       Wyoming     44.43    -110.59   \n",
        "3          Zion National Park          Utah     37.30    -113.03   \n",
        "4              Mount Rushmore  South Dakota     43.88    -103.46   \n",
+       "5       Great Smoky Mountains     Tennessee     35.65     -83.51   \n",
+       "6           Statue of Liberty      New York     40.69     -74.04   \n",
+       "7        Arches National Park          Utah     38.73    -109.59   \n",
+       "8               Niagara Falls      New York     43.10     -79.04   \n",
+       "9          Golden Gate Bridge    California     37.82    -122.48   \n",
        "\n",
-       "        category  \n",
-       "0  National Park  \n",
-       "1  National Park  \n",
-       "2  National Park  \n",
-       "3  National Park  \n",
-       "4       Monument  "
+       "              category  \n",
+       "0        National Park  \n",
+       "1        National Park  \n",
+       "2        National Park  \n",
+       "3        National Park  \n",
+       "4             Monument  \n",
+       "5       Natural Wonder  \n",
+       "6  Historical Landmark  \n",
+       "7        National Park  \n",
+       "8       Natural Wonder  \n",
+       "9             Landmark  "
       ]
      },
      "metadata": {},
@@ -163,7 +213,7 @@
     "data = pd.read_csv('data.csv')\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "display(data.head())"
+    "display(data)"
    ]
   },
   {
@@ -336,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c26ff443",
    "metadata": {},
    "outputs": [],
@@ -345,8 +395,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d86633bb",
+   "metadata": {},
+   "source": [
+    "### Baseline Route"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "03164166",
    "metadata": {},
    "outputs": [],
@@ -357,19 +415,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "ef71d437",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Distance(km): 13005 km\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute total distance\n",
     "def total_distance(route):\n",
     "    distance = 0\n",
     "    for i in range(len(route) - 1):\n",
-    "        start = (route.loc[i]['latitude'], route.loc[i]['longtitude'])\n",
-    "        end = (route.loc[i + 1]['latitude'], route.loc[i + 1]['longtitude'])\n",
+    "        start = (route.loc[i]['latitude'], route.loc[i]['longitude'])\n",
+    "        end = (route.loc[i + 1]['latitude'], route.loc[i + 1]['longitude'])\n",
     "        distance += geodesic(start, end).km\n",
-    "    return distance"
+    "    return distance\n",
+    "\n",
+    "baseline_distance = total_distance(random_route)\n",
+    "print(f\"Baseline Distance(km): {baseline_distance:.0f} km\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d469e76",
+   "metadata": {},
+   "source": [
+    "### Optimized Route"
    ]
   }
  ],
