Added: fixed the parts of the code

--- a/ds/notebook.ipynb
+++ b/ds/notebook.ipynb
@@ -443,11 +443,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7ce94f3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fb8ff61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d469e76",
    "metadata": {},
    "source": [
     "### Optimized Route"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "683aa68b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
